<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">校帮</string>
    <string name="action_settings">Settings</string>
    <!-- 菜单字符资源 -->
    <string name="menu_list_big">大</string>
    <string name="menu_list_small">小</string>
    <string name="menu_list_cold_dish">凉菜</string>
    <string name="menu_list_hot_dish">热菜</string>
    <string name="menu_list_soup">汤</string>

    <!-- 用户注册界面作用字符资源 -->
    <string name="user_register_account">账 号</string>
    <string name="user_register_password">密 码</string>
    <string name="user_register_reinput_password">确认密码</string>
    <string name="user_register_real_name">真实姓名</string>
    <string name="user_register_mail">邮箱</string>
    <string name="user_register_phone">电 话</string>
    <string name="user_register_collegeid">大学</string>
    <string name="user_register_apartid">楼 号</string>
    <string name="user_register_dormNum">宿舍号</string>
    <string name="user_register_button_confirme">注册</string>
    <string name="user_register_button_reset">重置</string>
    <string name="user_register_button_get_message">获取验证码</string>
    <string name="user_register_check_box_check_passwd">显示密码</string>
    <!-- 用户登录界面的字符串资源 -->
    <string name="title_activity_user_login">UserLoginActivity</string>
    <string name="user_login_account">用户名</string>
    <string name="user_login_password">密码</string>
    <string name="user_login_auto_save">保存账号</string>
    <string name="user_login_save_data">是</string>
    <string name="user_login_unsave_data">否</string>
    <string name="user_login_is_save_passwd">记住密码</string>
    <string name="user_login_button_confirme">登录</string>
    <string name="user_login_button_reset">重置</string>
    <string name="user_Register">注册</string>
    <string name="user_login_input_account">请输入用户名</string>
    <string name="user_login_input_passwd">请输入密码</string>
    <string name="user_login_forget_passwd">忘记密码?</string>
    <!-- 我的界面的字符串资源 -->
    <string name="more_my_order">我的订单</string>
    <string name="more_my_information">我的信息</string>
    <string name="more_change_passwd">修改密码</string>
    <string name="more_my_wealth">我的财富</string>
    <string name="more_check_for_updates">检查更新</string>
    <string name="more_logout">注销</string>
    <!-- 用户信息界面的字符串资源 -->
    <string name="user_info_reset">重置</string>
    <string name="user_info_modify">修改</string>
    <string name="user_info_modify_confirm">确认修改</string>
    <!-- 闪屏的字符串资源 -->
    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_guide_view">GuideViewActivity</string>
    <!-- 修改密码的字符串资源 -->
    <string name="user_change_passwd_confirm">确认修改</string>
    <string name="user_change_passwd_oriange">原密码:</string>
    <string name="user_change_passwd_new">新密码:</string>
    <string name="user_change_passwd_new_confrim">确认新密码:</string>
    <!-- 用户订单项的字符串资源 -->
    <string name="user_order_form_assess_dialog_good">好评</string>
    <string name="user_order_form_assess_dialog_normal">中评</string>
    <string name="user_order_form_assess_dialog_bad">差评</string>
    <string name="user_order_form_assess_dialog_content">请填写评价内容(可不填)</string>
    <string name="user_order_form_assess_dialog_submit">提交</string>
    <!-- 我的客服的字符串资源 -->
    <string name="my_service_qin">亲:</string>
    <string name="my_service_content">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;我很简单，但是不平凡，我的天职就是为您解决订餐问题，如果您遇到任何订餐问题，都可以拨打我们的客服热线，欢迎您给我们及时反馈。</string>
    <string name="my_service_qq">客服QQ：1051605363</string>
    <string name="my_service_phone">客服电话：18729354347</string>
    <string name="my_service_sweep">扫一扫，美食尽在掌握</string>
    <string name="my_service_made_by">made by zhaoc,fyf</string>

    <!-- 购物车的字符串资源 -->
    <string name="shopping_cart_order">提交订单</string>
    <string name="shopping_cart_remark">备注</string>
    <!-- 我要挑刺的字符串资源 -->
    <string name="my_suggestion_submit">确认提交</string>
    <!-- 首页的字符串资源 -->
    <string name="main_today_recommend">今日推荐</string>
    <!-- AndroidManifest.xml -->
    <string name="title_activity_choose_school">ChooseSchoolActivity</string>

</resources>