<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UserLoginActivity" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal" >

            <RelativeLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/image_account"
                    android:text="@string/user_login_account" />
            </RelativeLayout>

            <EditText
                android:id="@+id/EditTextUserLoginAccount"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="5"
                android:background="@android:color/white"
                android:hint="@string/user_login_input_account" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <RelativeLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/image_passwd"
                    android:text="@string/user_login_password" />
            </RelativeLayout>

            <EditText
                android:id="@+id/EditTextUserLoginPassword"
                android:layout_width="0dip"
                android:layout_height="45dp"
                android:layout_weight="5"
                android:background="@android:color/white"
                android:hint="@string/user_login_input_passwd"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/ButtonUserLoginConfirme"
                android:layout_width="0dip"
                android:layout_height="35dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/green_background"
                android:text="@string/user_login_button_confirme" />

            <Button
                android:id="@+id/ButtonUserRegister"
                android:layout_width="0dip"
                android:layout_height="35dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/green_background"
                android:text="@string/user_Register" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/CheckBoxIsSavePasswd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/user_login_is_save_passwd" />

            <Button
                android:id="@+id/ButtonForgetPasswd"
                android:layout_width="0dp"
                android:background="@android:color/transparent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/user_login_forget_passwd" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>