<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/user_register_phone" />

            <EditText
                android:id="@+id/EditTextUserRegisterPhone"
                android:layout_width="0dip"
                android:layout_height="35dp"
                android:layout_weight="2"
                android:background="@drawable/edit_text_frame"
                android:hint="请输入手机号码"
                android:inputType="phone"
                android:maxLength="11"
                android:maxLines="1"
                android:paddingLeft="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/user_register_password" />

            <EditText
                android:id="@+id/EditTextUserRegisterPassword"
                android:layout_width="0dip"
                android:layout_height="35dp"
                android:layout_weight="2"
                android:background="@drawable/edit_text_frame"
                android:ems="20"
                android:hint="请输入密码"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center" />

            <CheckBox
                android:id="@+id/CheckBoxUserCheckPasswd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/user_register_check_box_check_passwd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="10dp" >

            <EditText
                android:id="@+id/EditTextUserRegisterMessageCheck"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1.5"
                android:hint="请输入验证码"
                android:inputType="phone"
                android:maxLength="6"
                android:gravity="center_horizontal"
                android:maxLines="1"
                android:textColorHint="@android:color/holo_green_light" />

            <Button
                android:id="@+id/UserRegisterButtonGetMessage"
                android:layout_width="0dip"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:layout_weight="1.2"
                android:background="@drawable/regeister_get_message"
                android:text="@string/user_register_button_get_message"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp" >

            <Button
                android:id="@+id/ButtonUserRegisterReset"
                android:layout_width="0dip"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/green_background"
                android:text="@string/user_register_button_reset" />

            <Button
                android:id="@+id/ButtonUserRegisterConfirme"
                android:layout_width="0dip"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/green_background"
                android:text="@string/user_register_button_confirme" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>